<resources>
    <string name="About">About</string>
    <string name="Active">Active</string>
    <string name="ActiveRolls">Active rolls</string>
    <string name="Add">Add</string>
    <string name="AddedBy">Added by</string>
    <string name="AddLabels">Add labels</string>
    <string name="AddNewCamera">Add new camera</string>
    <string name="AddNewFilmStock">Add new film stock</string>
    <string name="AddNewFilter">Add new filter</string>
    <string name="AddNewAccessory">Add new accessory</string>
    <string name="Accessories">Accessories</string>
    <string name="Accessory">Accessory</string>
    <string name="AccessoryType">Accessory type</string>
    <string name="EditAccessory">Edit accessory</string>
    <string name="Teleconverter">Teleconverter</string>
    <string name="FocalReducer">Focal reducer</string>
    <string name="ExtensionTube">Extension tube / bellows</string>
    <string name="OpticalFactor">Optical factor</string>
    <string name="OpticalFactorHelp">Multiplies focal length and f-number; e.g. 1.4 for a teleconverter or 0.71 for a reducer</string>
    <string name="ExtensionLength">Extension (mm)</string>
    <string name="ExtensionLengthHelp">Physical tube or bellows extension; effective aperture uses the frame focal length at infinity focus</string>
    <string name="OpticalAccessorySummary">%1$s · %2$s×</string>
    <string name="ExtensionAccessorySummary">%1$s · %2$s mm</string>
    <string name="FiltersAndAccessories">Filters / accessories</string>
    <string name="AddNewFrame">Add new frame</string>
    <string name="AddNewLabel">Add new label</string>
    <string name="AddNewLens">Add new lens</string>
    <string name="AddNewRoll">Add new roll</string>
    <string name="AddPictureToGallery">Add current picture to gallery</string>
    <string name="AddressNotFound">Address not found</string>
    <string name="AddToFavorites">Add to favorites</string>
    <string name="Agree">Agree</string>
    <string name="All">All</string>
    <string name="AllFrames">All frames</string>
    <string name="AllRolls">All rolls</string>
    <string name="AllowedFormatsCustomShutterValue">Allowed value formats:\n12 (integer)\n12.123 (decimal)\n1/123 (fraction)</string>
    <string name="Aperture">Aperture value</string>
    <string name="ApertureIncrements">Aperture increments</string>
    <string name="ApertureRange">Aperture range</string>
    <string name="Apply">Apply</string>
    <string name="AppThemeTitle">App theme</string>
    <string name="Archive">Archive</string>
    <string name="Archived">Archived</string>
    <string name="ArchivedRolls">Archived rolls</string>
    <string name="ArtistName">Artist name</string>
    <string name="ArtistNameSummary">Artist name information to be stored under the artist tag in the file\'s exif</string>
    <plurals name="BatchEditFramesTitle">
        <item quantity="one">Batch edit %d frame</item>
        <item quantity="other">Batch edit %d frames</item>
    </plurals>
    <plurals name="BatchEditRollsTitle">
        <item quantity="one">Batch edit %d roll</item>
        <item quantity="other">Batch edit %d rolls</item>
    </plurals>
    <string name="Blue">Blue</string>
    <string name="Both">Both</string>
    <string name="Camera">Camera</string>
    <string name="CameraIsInUseConfirmation">Camera is in use. Delete anyway?</string>
    <string name="Cameras">CAMERAS</string>
    <string name="CamerasNoCap">Cameras</string>
    <string name="Cancel">Cancel</string>
    <string name="ChooseApertureRange">Choose aperture range</string>
    <string name="ChooseApertureValue">Choose aperture value</string>
    <string name="ChooseExposureComp">Choose exposure comp</string>
    <string name="ChooseFocalLength">Choose focal length</string>
    <string name="ChooseFocalLengthRange">Choose focal length range</string>
    <string name="ChooseFormat">Choose format</string>
    <string name="ChooseFrameCount">Choose frame count</string>
    <string name="ChooseISO">Choose ISO</string>
    <string name="ChooseIncrements">Choose increments</string>
    <string name="ChooseNoOfExposures">Choose no of exposures</string>
    <string name="ChoosePushOrPull">Choose push(+) or pull(-)</string>
    <string name="ChooseShutterRange">Choose shutter range</string>
    <string name="ChooseShutterSpeed">Choose shutter speed</string>
    <string name="Clear">Clear</string>
    <string name="ClearFilmStock">Clear film stock</string>
    <string name="ClickToAdd">Click to add</string>
    <string name="ClickToEdit">Click to edit</string>
    <string name="ClickToSet">Click to set</string>
    <string name="Close">Close</string>
    <string name="Cloudy">Cloudy</string>
    <string name="ComplementaryPicture">Complementary picture</string>
    <string name="ComplementaryPictures">Complementary pictures</string>
    <plurals name="ComplementaryPicturesExported">
        <item quantity="one">%d picture exported</item>
        <item quantity="other">%d pictures exported</item>
    </plurals>
    <plurals name="ComplementaryPicturesImported">
        <item quantity="one">%d picture imported successfully</item>
        <item quantity="other">%d pictures imported successfully</item>
    </plurals>
    <string name="ConfirmCameraDelete">Delete camera</string>
    <string name="ConfirmFilterDelete">Delete filter</string>
    <plurals name="ConfirmFramesDelete">
        <item quantity="one">Delete %d frame?</item>
        <item quantity="other">Delete %d frames?</item>
    </plurals>
    <string name="ConfirmLensDelete">Delete lens</string>
    <plurals name="ConfirmRollsDelete">
        <item quantity="one">Delete %d roll?</item>
        <item quantity="other">Delete %d rolls?</item>
    </plurals>
    <string name="Continue">Continue</string>
    <string name="CopyrightInformationSummary">Copyright information to be stored under the copyright tag in the file\'s exif</string>
    <string name="CopyrightInformationTitle">Copyright information</string>
    <string name="CsvDescription">Text file with the roll\'s data in csv format</string>
    <string name="CustomApertureValues">Custom aperture values</string>
    <string name="CustomApertureValuesHelp">Add custom aperture values to supplement the predefined list of available aperture values. Custom aperture values will be available for selection when adding new frames with this lens. Only positive values can be added.</string>
    <string name="Cyan">Cyan</string>
    <string name="Dark">Dark</string>
    <string name="Database">Database</string>
    <string name="DatabaseCopiedSuccessfully">Database copied successfully</string>
    <string name="DatabaseImported">Database imported successfully</string>
    <string name="Date">Date</string>
    <string name="Daylight">Daylight</string>
    <string name="Decline">Decline</string>
    <string name="DefaultFormat">Default format</string>
    <string name="Delete">Delete</string>
    <string name="DeleteFilmStock">Delete film stock</string>
    <string name="DeleteLabel">Delete label</string>
    <string name="DescriptionOrNote">Description/note</string>
    <string name="DeselectAll">Deselect all</string>
    <string name="Developed">Developed</string>
    <string name="DevelopedOn">Developed on</string>
    <string name="DisableInApp">Disable in app</string>
    <string name="Edit">Edit</string>
    <string name="EditAperture">Edit aperture</string>
    <string name="EditCamera">Edit camera</string>
    <string name="EditDateAndTime">Edit date and time</string>
    <string name="EditExposureCompensation">Edit exposure compensation</string>
    <string name="EditFilmStock">Edit film stock</string>
    <string name="EditFilter">Edit filter</string>
    <string name="EditFilters">Edit filters</string>
    <string name="EditFocalLength">Edit focal length</string>
    <string name="EditFrame">Edit frame #</string>
    <string name="EditFrameCounts">Edit frame counts</string>
    <string name="EditCopiedFramesCountsBy">Edit copied frames\' counts by…</string>
    <string name="EditFrameCountsBy">Edit frame counts by…</string>
    <string name="EditLabel">Edit label</string>
    <string name="EditLens">Edit lens</string>
    <string name="EditLightSource">Edit light source</string>
    <string name="EditLocation">Edit location</string>
    <string name="EditRoll">Edit roll info</string>
    <string name="EditShutterSpeed">Edit shutter speed</string>
    <string name="EnterCustomerApertureValue">Enter custom aperture value</string>
    <string name="EnterCustomShutterSpeedValue">Enter custom shutter speed value</string>
    <string name="ErrorAddingPictureToGallery">Error adding picture to gallery</string>
    <string name="ErrorCompressingComplementaryPicture">Error compressing complementary picture</string>
    <string name="ErrorExporting">An error occurred while exporting the files.</string>
    <string name="ErrorExportingComplementaryPictures">Error exporting complementary pictures</string>
    <string name="ExiftoolPathSummary">"If you are using the ExifTool stand-alone executable, you can define its path here ending with '/' or '\\' depending on your OS."</string>
    <string name="ExiftoolPathTitle">ExifTool path</string>
    <string name="ExportDatabaseSummary">Export SQL database as a .db file</string>
    <string name="ExportDatabaseTitle">Export database</string>
    <string name="ExportOrShare">Share files</string>
    <string name="ExportToDevice">Export files to storage</string>
    <string name="FileEndingSummary">File ending of the files you wish to tag (e.g. .jpg or .tiff etc.)</string>
    <string name="FileEndingTitle">File ending</string>
    <string name="FilmType">Film type</string>
    <string name="FilmProcess">Film process</string>
    <string name="FilterFilmStocksBy">Filter film stocks by</string>
    <string name="GPSUpdateSummary">Keep updating the current location using GPS.</string>
    <string name="GPSUpdateTitle">Location updates</string>
    <string name="Gear">Gear</string>
    <string name="Help">Help</string>
    <string name="Hybrid">Hybrid</string>
    <string name="ISO">ISO</string>
    <string name="IgnoreWarningsSummary">Adds -m option to the ExifTool commands to ignore minor errors and warnings when writing EXIF information.</string>
    <string name="IgnoreWarningsTitle">Ignore minor errors and warnings</string>
    <string name="ImportDatabaseSummary">Import SQL database from a previously exported .db file</string>
    <string name="ImportDatabaseTitle">Import database</string>
    <string name="Manufacturer">Manufacturer</string>
    <string name="Map">Map</string>
    <string name="MapType">Map type</string>
    <string name="Normal">Normal</string>
    <string name="PicturesPathSummary">"If the picture files you want to edit are in a certain folder, you can define its path here ending with '/' or '\\' depending on your OS."</string>
    <string name="PicturesPathTitle">Path to pictures</string>
    <string name="Preferences">Settings</string>
    <string name="RemoveFromFavorites">Remove from favorites</string>
    <string name="RemoveLabels">Remove labels</string>
    <string name="Reset">Reset</string>
    <string name="RotateLeft90Degrees">Rotate left 90 degrees</string>
    <string name="RotateRight90Degrees">Rotate right 90 degrees</string>
    <string name="Satellite">Satellite</string>
    <string name="Search">Search</string>
    <string name="SelectAll">Select all</string>
    <string name="SelectPictureFromGallery">Select from gallery</string>
    <string name="Settings">Settings</string>
    <string name="SortBy">Sort by</string>
    <string name="SortFilmStocksBy">Sort film stocks by</string>
    <string name="TakeNewComplementaryPicture">Take new complementary picture</string>
    <string name="Terrain">Terrain</string>
    <string name="Unarchive">Unarchive</string>
    <string name="VisibleRolls">Visible rolls</string>
</resources>