<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/General_Cap">

        <CheckBoxPreference
            android:key="GPSUpdate"
            android:title="@string/GPSUpdateTitle"
            android:summary="@string/GPSUpdateSummary"
            android:defaultValue="true"
            />

        <ListPreference
            android:key="AppTheme"
            android:title="@string/AppThemeTitle"
            android:entries="@array/AppThemeOptions"
            android:entryValues="@array/AppThemeData"
            android:defaultValue="LIGHT"
            />

        <ListPreference
            android:key="UIColor"
            android:title="@string/UIColorTitle"
            android:entries="@array/UIColorOptions"
            android:entryValues="@array/UIColorOptionsData"
            android:defaultValue="#00838F,#006064"
            />

        <ListPreference
            android:key="FilesToExport"
            android:title="@string/FilesToExportTitle"
            android:summary="@string/FilesToExportSummary"
            android:entries="@array/FilesToExportOptions"
            android:entryValues="@array/FilesToExportData"
            android:defaultValue="BOTH"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/Exiftool_Cap">

        <EditTextPreference
            android:key="ArtistName"
            android:title="@string/ArtistName"
            android:summary="@string/ArtistNameSummary"
            android:defaultValue=""
            android:capitalize="words"
            />

        <EditTextPreference
            android:key="CopyrightInformation"
            android:title="@string/CopyrightInformationTitle"
            android:summary="@string/CopyrightInformationSummary"
            android:defaultValue=""
            android:capitalize="words"/>

        <EditTextPreference
            android:key="ExiftoolPath"
            android:title="@string/ExiftoolPathTitle"
            android:summary="@string/ExiftoolPathSummary"
            android:defaultValue=""
            android:capitalize="none"/>

        <EditTextPreference
            android:key="PicturesPath"
            android:title="@string/PicturesPathTitle"
            android:summary="@string/PicturesPathSummary"
            android:defaultValue=""
            android:capitalize="none"/>

        <EditTextPreference
            android:key="FileEnding"
            android:title="@string/FileEndingTitle"
            android:summary="@string/FileEndingSummary"
            android:defaultValue=".jpg"
            android:capitalize="none"
            />

        <CheckBoxPreference
            android:key="IgnoreWarnings"
            android:title="@string/IgnoreWarningsTitle"
            android:summary="@string/IgnoreWarningsSummary"
            android:defaultValue="false"
            android:capitalize="none"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/DatabaseCap"
        >

        <Preference
            android:key="ExportDatabase"
            android:title="@string/ExportDatabaseTitle"
            android:summary="@string/ExportDatabaseSummary"
            />

        <Preference
            android:key="ImportDatabase"
            android:title="@string/ImportDatabaseTitle"
            android:summary="@string/ImportDatabaseSummary"
            />

    </PreferenceCategory>


</PreferenceScreen>