<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/Search"
        android:icon="@drawable/abc_ic_search_api_material"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        tools:ignore="PrivateResource" />

    <item
        android:title="@string/MapType"
        android:id="@+id/menu_item_map_type"
        android:icon="@drawable/ic_map_white_48dp"
        app:showAsAction="always">
        <menu
            xmlns:android="http://schemas.android.com/apk/res/android">
            <group
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu_item_normal"
                    android:title="@string/Normal"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/menu_item_hybrid"
                    android:title="@string/Hybrid"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/menu_item_satellite"
                    android:title="@string/Satellite"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/menu_item_terrain"
                    android:title="@string/Terrain"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

</menu>