<?xml version="1.0" encoding="utf-8"?><!--
  ~ Exif Notes
  ~ Copyright (C) 2022  Tommi Hirvonen
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:title="@string/VisibleRolls"
        >
        <menu>
            <item
                android:id="@+id/active_rolls_filter"
                android:checkable="true"
                android:icon="@drawable/ic_outline_camera_alt_24"
                android:title="@string/Active"
                app:actionViewClass="android.widget.TextView"
                />
            <item
                android:id="@+id/archived_rolls_filter"
                android:checkable="true"
                android:icon="@drawable/ic_outline_inventory_2_24"
                android:title="@string/Archived"
                app:actionViewClass="android.widget.TextView"
                />
            <!--
            <item
                android:id="@+id/favorite_rolls_filter"
                android:enabled="false"
                android:checkable="true"
                android:icon="@drawable/ic_outline_favorite_24"
                android:title="Favorites (coming soon)"
                />
                -->
            <item
                android:id="@+id/all_rolls_filter"
                android:checkable="true"
                android:title="@string/All"
                app:actionViewClass="android.widget.TextView"
                />
        </menu>
    </item>

    <item
        android:id="@+id/menu_item_show_on_map"
        android:icon="@drawable/ic_outline_map_24"
        app:iconTint="?attr/colorControlNormal"
        android:title="@string/Map"
        />

    <item
        android:id="@+id/menu_item_gear"
        android:title="@string/Gear"
        android:icon="@drawable/ic_outline_camera_24"
        />

    <item
        android:id="@+id/menu_item_preferences"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/Settings"
        />
</menu>