<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Exif Notes
  ~ Copyright (C) 2022  Tommi Hirvonen
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/FilterNoColon"
        android:id="@+id/menu_item_filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom">

        <menu>

            <group
                android:checkableBehavior="none">
                <item
                    android:title="@string/FilterFilmStocksBy"
                    android:enabled="false"
                    />
                <item
                    android:title="@string/Manufacturer"
                    android:id="@+id/filter_mode_film_manufacturer"
                    />
                <item
                    android:title="@string/ISO"
                    android:id="@+id/filter_mode_film_iso"
                    />
                <item
                    android:title="@string/FilmType"
                    android:id="@+id/filter_mode_film_type"
                    />
                <item
                    android:title="@string/FilmProcess"
                    android:id="@+id/filter_mode_film_process"
                    />
                <item
                    android:title="@string/AddedBy"
                    android:id="@+id/filter_mode_added_by"
                    />
                <item
                    android:title="@string/Reset"
                    android:id="@+id/filter_mode_reset"
                    />
            </group>

        </menu>

    </item>

    <item
        android:title="@string/Sort"
        android:id="@+id/menu_item_sort"
        android:icon="@drawable/ic_baseline_sort_24"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom">

        <menu>

            <group
                android:checkableBehavior="single">
                <item
                    android:title="@string/SortFilmStocksBy"
                    android:enabled="false"
                    android:checkable="false"
                    />
                <item
                    android:title="@string/NameNoColon"
                    android:id="@+id/sort_mode_film_stock_name"
                    />
                <item
                    android:title="@string/ISO"
                    android:id="@+id/sort_mode_film_stock_iso"
                    />
            </group>

        </menu>

    </item>

</menu>