<?xml version="1.0" encoding="utf-8"?><!--
  ~ Exif Notes
  ~ Copyright (C) 2023  Tommi Hirvonen
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_complementary_picture"
        android:title="@string/TakeNewComplementaryPicture"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        app:iconTint="?attr/colorControlNormal"
        />
    <item
        android:id="@+id/select_from_gallery"
        android:title="@string/SelectPictureFromGallery"
        android:icon="@drawable/outline_insert_photo_24"
        app:iconTint="?attr/colorControlNormal"
        />
    <item
        android:id="@+id/add_to_gallery"
        android:title="@string/AddPictureToGallery"
        android:icon="@drawable/outline_add_photo_alternate_24"
        app:iconTint="?attr/colorControlNormal"
        />
    <item
        android:id="@+id/rotate_right"
        android:title="@string/RotateRight90Degrees"
        android:icon="@drawable/outline_rotate_90_degrees_cw_24"
        app:iconTint="?attr/colorControlNormal"
        />
    <item
        android:id="@+id/rotate_left"
        android:title="@string/RotateLeft90Degrees"
        android:icon="@drawable/outline_rotate_90_degrees_ccw_24"
        app:iconTint="?attr/colorControlNormal"
        />
    <item
        android:id="@+id/clear"
        android:title="@string/Clear"
        android:icon="@drawable/ic_baseline_close_24"
        app:iconTint="?attr/colorControlNormal"
        />
</menu>