<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Exif Notes
  ~ Copyright (C) 2022  Tommi Hirvonen
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_edit"
        android:icon="@drawable/ic_outline_edit_24"
        app:iconTint="?attr/colorControlNormal"
        android:title="@string/Edit"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_item_select_all"
        android:icon="@drawable/ic_outline_select_all_24"
        app:iconTint="?attr/colorControlNormal"
        android:title="@string/SelectAll"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_item_delete"
        android:icon="@drawable/ic_outline_delete_24"
        app:iconTint="?attr/colorControlNormal"
        android:title="@string/Delete"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/outline_more_vert_24"
        app:iconTint="?attr/colorControlNormal"
        android:title="@string/More"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_item_unarchive"
                android:icon="@drawable/ic_outline_unarchive_24"
                app:iconTint="?attr/colorControlNormal"
                android:title="@string/Unarchive"
                />

            <item
                android:id="@+id/menu_item_favorite_on"
                android:icon="@drawable/ic_outline_favorite_24"
                app:iconTint="?attr/colorControlNormal"
                android:title="@string/AddToFavorites"
                />

            <item
                android:id="@+id/menu_item_favorite_off"
                android:icon="@drawable/ic_outline_favorite_border_24"
                app:iconTint="?attr/colorControlNormal"
                android:title="@string/RemoveFromFavorites"
                />

            <item
                android:id="@+id/menu_item_add_labels"
                android:icon="@drawable/ic_outline_new_label_24"
                app:iconTint="?attr/colorControlNormal"
                android:title="@string/AddLabels"
                />

            <item
                android:id="@+id/menu_item_remove_labels"
                android:icon="@drawable/outline_label_off_24"
                app:iconTint="?attr/colorControlNormal"
                android:title="@string/RemoveLabels"
                />
        </menu>
    </item>

</menu>