<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Exif Notes
  ~ Copyright (C) 2022  Tommi Hirvonen
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        app:iconTint="?attr/menuIconTint"
        android:title="@string/Edit"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_item_select_all"
        android:icon="@drawable/ic_baseline_select_all_24"
        app:iconTint="?attr/menuIconTint"
        android:title="@string/SelectAll"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_item_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        app:iconTint="?attr/menuIconTint"
        android:title="@string/Delete"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_item_archive"
        android:icon="@drawable/ic_baseline_archive_24"
        app:iconTint="?attr/menuIconTint"
        android:title="@string/Archive"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_item_unarchive"
        android:icon="@drawable/ic_baseline_unarchive_24"
        app:iconTint="?attr/menuIconTint"
        android:title="@string/Unarchive"
        app:showAsAction="never"
        />

</menu>